--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a{list-style:none;}
     margin:auto;}
     
 .top-wrapper{padding:180px 0px 100px 0px; 
-    background-image:url(../20240502.jpg); 
+    background-image:url(./png/20240502.jpg); 
     color:white; 
       background-size:cover; }
 
